feat: added swagger security
